force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c.object-meta.xml
<CustomObject>
    <description>Keeps track of which deployment packages have been installed at what time on which device</description>
    <label>Deployment Package Installation</label>
    <nameField>
        <displayFormat>SMADPI-{000000}</displayFormat>
        <label>Deployment Package Installation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Package Installations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>