force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__AppInstallationID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__AppInstallationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the device status overview record.</description>
    <label>Installation Id</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_Installation__c</referenceTo>
    <relationshipLabel>Deployment Package Installations</relationshipLabel>
    <relationshipName>Sync_Mobile_App_Depl_Pkg_Insts</relationshipName>
    <type>Lookup</type>
</CustomField>