force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__Deployment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Deployment_Date_Time__c</fullName>
    <description>Timestamp when the deployment package was applied.</description>
    <label>Deployment Date</label>
    <type>DateTime</type>
</CustomField>