force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Id__c</fullName>
    <description>ID of the device.</description>
    <label>Device Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>