force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__Is_Current__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Is_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag which indicates the entry is related to latest installed deployment package. The value is set by the trigger.</description>
    <label>Is Latest Package On Device</label>
    <type>Checkbox</type>
</CustomField>