force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Device User ID.</description>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_Mobile_App_Depl_Pkg_Inst</relationshipName>
    <type>Lookup</type>
</CustomField>