force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__State__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__State__c</fullName>
    <description>Represents deployment package installation status.
        Possible values are: 
        Downloaded
        Error
        Installed</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Downloaded</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>