force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Depl_Pkg_Inst__c/fields/cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to deployment package assignment.</description>
    <label>Deployment Package Assignment</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_Depl_Pkg_As__c</referenceTo>
    <relationshipLabel>Deployment Package Installations</relationshipLabel>
    <relationshipName>Sync_Mobile_App_Depl_Pkg_Inst</relationshipName>
    <type>Lookup</type>
</CustomField>